testsuite/tests/properties/invalid_map/test.out
== arg_type/test.lkt ==
test.lkt:6:30: error: Entity[NumberNode] expected
6 |         self.nb_list.map((x: Int) => x)
  |                              ^^^


== correct/test.lkt ==
Code generation was successful

== default_value/test.lkt ==
test.lkt:6:27: error: default values are not allowed here
6 |         self.nb_list.map((x=12) => x)
  |                           ^^^^


== too_many_args/test.lkt ==
test.lkt:6:28: error: 2 arguments expected, got 3
6 |         self.nb_list.imap((x, y, z) => x)
  |                            ^^^^^^^


lkt_compile: Done
